--- a/index.html
+++ b/index.html
@@ -29,15 +29,35 @@
           <!-- This divs will go in body, to link to menu -->
              <div id="ourmission">
 
+               <h2>Our Mission</h2>
+               <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+
+
           </div>
+
            <div id="store">
 
+              <h2>Tea of the Month</h2>
+              <h4>What's Steeping at The Tea Cozy?</h4>
 
-      </div>
+          <!-- Section-Items for sale and their images -->
 
-      <div id="locations">
+               <div class="sale-items">
 
-      </div>
+                <div class="item">
+                  <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-berryblitz.jpg" alt="berryblitz">
+                  <span>Fall Berry Blitz Tea</span>
+
+                </div>
+
+              </div>
+
+
+          </div>
+
+         <div id="locations">
+
+        </div>
 
 
   </body>
