--- a/index.html
+++ b/index.html
@@ -27,11 +27,19 @@
 
             </header>
           <!-- This divs will go in body, to link to menu -->
-             <div id="ourmission">
+          <!-- Main content Section -->
+          <!-- Mission -->
+           <div class="main-content">
+
+
+             <div id="ourmission" class="flex-conteiner">
+
+               <div class="content">
 
                <h2>Our Mission</h2>
                <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
-
+               
+            </div>
 
           </div>
 
@@ -59,6 +67,7 @@
 
         </div>
 
+    </div>
 
   </body>
 </html>
