--- a/index.html
+++ b/index.html
@@ -35,10 +35,13 @@
              <div id="ourmission" class="flex-conteiner">
 
                <div class="content">
+                <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-mission-background.jpg" alt="Our Mission">
+               <div class="text-block">
+                 <h2>Our Mission</h2>
+                 <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+               </div>
 
-               <h2>Our Mission</h2>
-               <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
-               
+
             </div>
 
           </div>
