--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <body>
 
-    <!-- Header Section -->
+               <!-- Header Section -->
 
     <header class="flex-conteiner">
 
@@ -28,17 +28,17 @@
             </header>
           <!-- This divs will go in body, to link to menu -->
           <!-- Main content Section -->
-          <!-- Mission -->
-           <div class="main-content">
+
+  <div class="main-conteiner">
 
 
              <div id="ourmission" class="flex-conteiner">
 
                <div class="content">
                 <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-mission-background.jpg" alt="Our Mission">
-               <div class="text-block">
-                 <h2>Our Mission</h2>
-                 <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+               <div class="conteiner">
+                 <h2 class="a-text">Our Mission</h2>
+                 <h4 class="b-text">Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
                </div>
 
 
@@ -46,14 +46,19 @@
 
           </div>
 
-           <div id="store">
+     <!-- Items for sale -->
+
+    <div id="store">
+
+             <div class="store-highlight">
 
               <h2>Tea of the Month</h2>
               <h4>What's Steeping at The Tea Cozy?</h4>
 
+            </div>
           <!-- Section-Items for sale and their images -->
 
-               <div class="sale-items">
+        <div class="sale-items">
 
                 <div class="item">
                   <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-berryblitz.jpg" alt="berryblitz">
@@ -61,16 +66,96 @@
 
                 </div>
 
-              </div>
+                <div class="item">
 
+                  <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-spiced-rum.jpg" alt="Spiced Rum Tea">
+
+                  <span>Spiced Rum Tea</span>
+
+                </div>
+
+                <div class="item">
+
+                  <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-donut.jpg" alt="Seasonal Donuts">
+
+                  <span>Seasonal Donuts</span>
+
+                </div>
+
+                <div class="item">
+
+                  <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myrtle-ave.jpg" alt="Myrtle Ave Tea">
+
+                  <span>Myrtle Ave Tea</span>
+
+                </div>
+
+                <div class="item">
+
+                  <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-bedford-bizarre.jpg" alt="Bedford Bizarre Tea">
+
+                  <span>Bedford Bizarre Tea</span>
+
+                </div>
+        </div>
+     </div>
+
+        <!-- Locations -->
+
+    <div class="locations">
+
+            <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-locations-background.jpg" alt="Locations">
+
+          <div class="box">
+
+                  <h3>Downtown</h3>
+                  <h4>384 West 4th St
+
+                      Suite 108
+
+                 Portland, Maine</h4>
 
           </div>
 
-         <div id="locations">
+          <div class="box">
 
-        </div>
+            <h3>East Bayside</h3>
+            <h4>3433 Phisherman's Avenue
 
-    </div>
+                  Northwest Corner)
+
+                  Portland, Maine</h4>
+
+          </div>
+
+        <div class="box">
+
+              <h3>Oakdale</h3>
+            <h4>515 Crescent Avenue
+
+              Second Floor
+
+            Portland, Maine</h4>
+
+      </div>
+  </div>
+
+                 <!-- Footer -->
+
+        <footer>
+
+           <h2>The Tea Cozy</h2>
+           <h5>contact@theteacozy.com</h5>
+
+           <h5>917-555-8904</h5>
+
+           <span>copyright The Tea Cozy 2017</span>
+
+        </footer>
+
+
+  </div>
+
 
   </body>
 </html>
