--- a/index.html
+++ b/index.html
@@ -37,8 +37,10 @@
                <div class="content">
                 <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-mission-background.jpg" alt="Our Mission">
                <div class="conteiner">
-                 <h2 class="a-text">Our Mission</h2>
-                 <h4 class="b-text">Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+                 <input type="text" name="mission" value="Our Mission"></input>
+
+                 <h2 class="text">Our Mission</h2>
+                 <h4 class="text">Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
                </div>
 
 
