--- a/index.html
+++ b/index.html
@@ -36,14 +36,21 @@
 
                <div class="content">
                 <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-mission-background.jpg" alt="Our Mission">
-               <div class="conteiner">
+               <!--<div class="conteiner">
                  <input type="text" name="mission" value="Our Mission"></input>
 
                  <h2 class="text">Our Mission</h2>
                  <h4 class="text">Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
-               </div>
+               </div>-->
+          <div class="shape">
+            <div class="square">
 
 
+                 <h2>Our Mission</h2>
+                 <h4>Handpicked, Artisanally bla bla.</h4>
+
+          </div>
+        </div>
             </div>
 
           </div>
