--- a/index.html
+++ b/index.html
@@ -42,14 +42,12 @@
                  <h2 class="text">Our Mission</h2>
                  <h4 class="text">Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
                </div>-->
-          <div class="shape">
-            <div class="square">
+          <div class="text-conteiner">
+
+                 <h2 class="text">Our Mission</h2>
+                 <h4 class="text">Handpicked, Artisanally bla bla.</h4>
 
 
-                 <h2>Our Mission</h2>
-                 <h4>Handpicked, Artisanally bla bla.</h4>
-
-          </div>
         </div>
             </div>
 
