--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
                 <div class="item">
                   <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-berryblitz.jpg" alt="berryblitz">
-                  <span>Fall Berry Blitz Tea</span>
+                  <span class="item-text">Fall Berry Blitz Tea</span>
 
                 </div>
 
@@ -77,7 +77,7 @@
 
                   <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-spiced-rum.jpg" alt="Spiced Rum Tea">
 
-                  <span>Spiced Rum Tea</span>
+                  <span class="item-text">Spiced Rum Tea</span>
 
                 </div>
 
@@ -85,7 +85,7 @@
 
                   <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-donut.jpg" alt="Seasonal Donuts">
 
-                  <span>Seasonal Donuts</span>
+                  <span class="item-text">Seasonal Donuts</span>
 
                 </div>
 
@@ -93,7 +93,7 @@
 
                   <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myrtle-ave.jpg" alt="Myrtle Ave Tea">
 
-                  <span>Myrtle Ave Tea</span>
+                  <span class="item-text">Myrtle Ave Tea</span>
 
                 </div>
 
@@ -101,7 +101,7 @@
 
                   <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-bedford-bizarre.jpg" alt="Bedford Bizarre Tea">
 
-                  <span>Bedford Bizarre Tea</span>
+                  <span class="item-text">Bedford Bizarre Tea</span>
 
                 </div>
         </div>
