--- a/index.html
+++ b/index.html
@@ -107,45 +107,89 @@
         </div>
      </div>
 
-        <!-- Locations -->
+     <!-- Locations Section second time -->
+
+           <div id="locations">
+
+             <h2>Locations</h2>
+
+             <div class="flex-conteiner locations">
+               <div class="location">
+
+                 <h3>Downtown</h3>
+                 <p>384 West 4th St</p>
+                 <p>Suit 100</p>
+                 <p>Portland, Main</p>
+
+               </div>
+
+               <div class="location">
+
+                 <h3>East Bayside</h3>
+                 <p>3433 Phisherman's Avenue</p>
+                 <p>(Northwest Corner)</p>
+                 <p>Portland, Main</p>
+
+
+               </div>
+
+               <div class="location">
+
+                 <h3>Oakdale</h3>
+                 <p>515 Crescent Avenue</p>
+                 <p>Second Floor</p>
+                 <p>Portland, Main</p>
+
+               </div>
+
+             </div>
+
+           </div>
+                       <!-- Locations again
 
     <div class="locations">
 
-            <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-locations-background.jpg" alt="Locations">
+           <h2>Locations</h2>
 
-          <div class="box">
+           <div class="flex-conteiner locations">
+
+
+          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-locations-background.jpg" alt="Locations">
+
+          <div class="location">
 
                   <h3>Downtown</h3>
-                  <h4>384 West 4th St
+                  <p>384 West 4th St
 
                       Suite 108
 
-                 Portland, Maine</h4>
+                 Portland, Maine</p>
 
           </div>
 
-          <div class="box">
+          <div class="locations">
 
             <h3>East Bayside</h3>
-            <h4>3433 Phisherman's Avenue
+            <p>3433 Phisherman's Avenue
 
                   Northwest Corner)
 
-                  Portland, Maine</h4>
+                  Portland, Maine</p>
 
           </div>
 
-        <div class="box">
+        <div class="location">
 
               <h3>Oakdale</h3>
-            <h4>515 Crescent Avenue
+            <p>515 Crescent Avenue
 
               Second Floor
 
-            Portland, Maine</h4>
+            Portland, Maine</p>
 
       </div>
-  </div>
+      </div>
+  </div>  -->
 
                  <!-- Footer -->
 
