--- a/index.html
+++ b/index.html
@@ -191,16 +191,22 @@
       </div>
   </div>  -->
 
+        <!-- Contact Section -->
+
+        <div id="contact">
+
+          <h2>The Tea Cozy</h2>
+          <h5>contact@teacozy.com</h5>
+          <h5>917-555-8904</h5>
+
+        </div>
+
                  <!-- Footer -->
 
         <footer>
 
-           <h2>The Tea Cozy</h2>
-           <h5>contact@theteacozy.com</h5>
 
-           <h5>917-555-8904</h5>
-
-           <span>copyright The Tea Cozy 2017</span>
+           <h5>copyright The Tea Cozy 2017</h5>
 
         </footer>
 
