--- a/index.html
+++ b/index.html
@@ -32,28 +32,25 @@
   <div class="main-conteiner">
 
 
-             <div id="ourmission" class="flex-conteiner">
+             <div class="background-image-conteiner">
 
-               <div class="content">
-                <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-mission-background.jpg" alt="Our Mission">
+               <div class="text-over-image">
                <!--<div class="conteiner">
                  <input type="text" name="mission" value="Our Mission"></input>
 
                  <h2 class="text">Our Mission</h2>
                  <h4 class="text">Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
                </div>-->
-          <div class="text-conteiner">
-
-                 <h2 class="text">Our Mission</h2>
-                 <h4 class="text">Handpicked, Artisanally bla bla.</h4>
 
 
-        </div>
+                 <h2>Our Mission</h2>
+                 <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+
             </div>
 
           </div>
 
-     <!-- Items for sale -->
+                 <!-- Items for sale -->
 
     <div id="store">
 
@@ -107,7 +104,7 @@
         </div>
      </div>
 
-     <!-- Locations Section second time -->
+           <!-- Locations Section second time -->
 
            <div id="locations">
 
