--- a/index.html
+++ b/index.html
@@ -107,8 +107,11 @@
            <!-- Locations Section second time -->
 
            <div id="locations">
+             <div class="text-on-image">
 
-             <h2>Locations</h2>
+               <h2>Locations</h2>
+
+             </div>
 
              <div class="flex-conteiner locations">
                <div class="location">
@@ -200,12 +203,14 @@
 
                  <!-- Footer -->
 
-        <footer>
 
 
-           <h5>copyright The Tea Cozy 2017</h5>
+          <div class="footer">
+            <div class="footer-text">
+              <h5>copyright The Tea Cozy 2017</h5>
+            </div>
 
-        </footer>
+          
 
 
   </div>
